# rivetkit

./: .gitattributes  .gitignore  .release-please-manifest.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MEMORY.md  CONTRIBUTING.md  Cargo.toml  NEW_SPEC.md  NEW_SPEC2.md  README.md  TESTING.md  TODO.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsup.base.ts  turbo.json  vitest.base.ts  vitest.config.ts
.cursor/rules/: actor-core-rules.mdc  snippet-to-example-rules.mdc
.github/workflows/: claude.yml  pkg-pr-new.yaml  release-please.yml  test.yml
.verdaccio/: .gitignore
.verdaccio/conf/: config.yaml
clients/openapi/: openapi.json
clients/python/: Cargo.toml  README.md  pyproject.toml  requirements.txt
clients/python/src/: lib.rs  util.rs
clients/python/src/events/async/: client.rs  handle.rs
clients/python/src/events/sync/: client.rs  handle.rs  mod.rs
clients/python/src/simple/: mod.rs
clients/python/src/simple/async/: client.rs  handle.rs
clients/python/src/simple/sync/: client.rs  handle.rs
clients/python/tests/: async.py  common.py  simple_async.py  simple_sync.py  sync.py  test_e2e_async.py  test_e2e_simple_async.py  test_e2e_simple_sync.py  test_e2e_sync.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: backoff.rs  client.rs  common.rs  connection.rs  handle.rs  lib.rs
clients/rust/src/drivers/: mod.rs  sse.rs  ws.rs
clients/rust/src/protocol/: mod.rs  query.rs  to_client.rs  to_server.rs
clients/rust/tests/: e2e.rs
docs/: .bump  CLAUDE.md  README.md  docs.json  introduction.mdx  mint.json  openapi.json  overview.mdx
docs/actor/: actions.mdx  authentication.mdx  connections.mdx  events.mdx  lifecycle.mdx  metadata.mdx  overview.mdx  quickstart.mdx  schedule.mdx  state.mdx  types.mdx
docs/actors/: actions.mdx  communicating-between-actors.mdx  communicating-with-actors.mdx  connections.mdx  events.mdx  external-sql.mdx  helper-types.mdx  lifecycle.mdx  metadata.mdx  overview.mdx  quickstart-backend.mdx  quickstart-frontend.mdx  quickstart-react.mdx  quickstart.mdx  scaling.mdx  state.mdx  types.mdx
docs/changelog/: overview.mdx
docs/clients/: javascript.mdx  python.mdx  react.mdx  rust.mdx
docs/concepts/: actions.mdx  authentication.mdx  building-actors.mdx  connections.mdx  cors.mdx  edge.mdx  events.mdx  external-sql.mdx  interacting-with-actors.mdx  interacting-with-workers.mdx  lifecycle.mdx  logging.mdx  manage.mdx  metadata.mdx  overview.mdx  remote-procedure-calls.mdx  rpc.mdx  scaling.mdx  schedule.mdx  state.mdx  testing.mdx  topology.mdx  types.mdx
docs/drivers/: build.mdx  building-drivers.mdx  file-system.mdx  (+5 more)
internal-docs/: CONFIG_TYPES.md
rust/client/: Cargo.toml  README.md
rust/client/src/: backoff.rs  client.rs  encoding.rs  handle.rs  lib.rs  protocol.rs
rust/client/src/drivers/: mod.rs  sse.rs  ws.rs
rust/client/tests/: e2e.rs
scripts/: create_manager.sh  e2e-publish.ts  publish.sh  publish.ts  release.sh  release.ts  sse-test.sh  template-platforms.ts  template_platforms.ts  utils.ts
website/: README.md  introduction.mdx  mint.json
(+561 files in other folders)
