[package]
name = "python_actor_core_client"
version = "0.8.0"
edition = "2021"

[lib]
name = "python_actor_core_client"
crate-type = ["cdylib"]

[dependencies]
actor-core-client = { path = "../rust/", version = "0.8.0" }
futures-util = "0.3.31"
once_cell = "1.21.3"
pyo3 = { version = "0.24.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.24.0", features = ["tokio-runtime"] }
serde_json = "1.0.140"
tokio = "1.44.2"
