[package]
name = "actor-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
eventsource-client = "0.14.0"
futures-util = "0.3.31"
reqwest = "0.12.12"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0"
tokio =  { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "handshake"] }
tungstenite = "0.26.2"
urlencoding = "2.1.3"
